__kube__/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: energy-journey-storybook
  namespace: energy-front-office
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: energy-journey-storybook
    team: energy-front-office
