__kube__/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: energy-journey-storybook
  namespace: energy-front-office
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: rvu-office
spec:
  rules:
  - host: energy-journey-storybook.office.rvu.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: energy-journey-storybook
          servicePort: 80
